[+] Support for Gamdom

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "python.pythonPath": "C:\\Users\\DanyT\\AppData\\Local\\Programs\\Python\\Python37-32\\python.exe",
+    "python.pythonPath": "C:\\Users\\SyfuxX\\AppData\\Local\\Programs\\Python\\Python37-32\\python.exe",
     "python.linting.enabled": false
 }
