--- a/config.ini
+++ b/config.ini
@@ -1,30 +1,48 @@
 [Settings]
 money = True
-chip_1 = True
-start = True
-double = False
+chip_1 = False
+start = False
+double = True
+divide = True
 red = True
 black = True
-losersection = True
-redorblack = 2
-casino = CasinoClub
+losersection = False
+winred = True
+winblack = True
+redorblack = 1
+casino = Gamdom
 
 [Player]
-money = 1000.0
+money = 1068.0
 
 [Cord]
-chip_1_f = 359
-chip_1_s = 434
-color_red_f = 318
-color_red_s = 434
-color_black_f = 339
-color_black_s = 434
-play_f = 298
-play_s = 435
-double_f = 0
-double_s = 0
-loser_f = 385
-loser_s = 437
-loser_t = 435
-loser_fo = 449
+chip_1_f = 0
+chip_1_s = 0
+color_red_f = 1001
+color_red_s = 717
+color_black_f = 1595
+color_black_s = 729
+play_f = 0
+play_s = 0
+double_f = 1470
+double_s = 590
+divide_f = 1396
+divide_s = 588
+loser_f = 0
+loser_s = 0
+loser_t = 0
+loser_fo = 0
+win_red_f = 1599
+win_red_s = 383
+win_red_t = 1649
+win_red_fo = 398
+win_black_f = 1599
+win_black_s = 383
+win_black_t = 1649
+win_black_fo = 398
+
+[ColorCodes]
+lose = 10246
+winred = 1948
+winblack = 1844
 
